Fix Tab title, Do not use timeline headers as links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/twfx-logo-96x96.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>Tweet Wall FX Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -170,10 +170,10 @@
            <span class="iconBackground"></span>
             <div class="col-xs-12 col-md-6 align-right">
                 <div class="timeline-text-content">
-                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"><a href="https://twitter.com/Stephan007/status/532218740969332736" target="_blank">
-                        First public Tweet Wall FX</a></h4>
+                    <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
+                        First public Tweet Wall FX</h4>
                     <p class="mbr-timeline-text mbr-fonts-style display-7">
-                        After some challenging problems the first version of the Tweet Wall FX was shown on the exhibition floor of Devoxx Belgium 2014. The shown version was based on the work of a world wide community &nbsp;led by Johan Vos, José Pereda, Jason Polastrini and Sven Reimers and finished in the Hackergarten on site at Devoxx, sponsored by JCP.</p>
+                        After some challenging problems the first version of the Tweet Wall FX was shown on the exhibition floor of <a href="https://twitter.com/Stephan007/status/532218740969332736" target="_blank">Devoxx Belgium 2014</a>. The shown version was based on the work of a world wide community &nbsp;led by Johan Vos, José Pereda, Jason Polastrini and Sven Reimers and finished in the Hackergarten on site at Devoxx, sponsored by JCP.</p>
                  </div>
             </div>
             </div>
@@ -188,8 +188,8 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"><a href="https://github.com/TweetWallFX/TweetwallFX/commit/89c7a18d470885015156e2e4e72cc9834cbc8d54" target="_blank">Tweet Wall FX organization created at GitHub by JUG Bodensee</a></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Serving the request for another version of the wall for the 2015 edition of Devoxx, JUG Bodensee as a community took over the development effort.</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Tweet Wall FX organization created at GitHub by JUG Bodensee</h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Serving the request for another version of the wall for the 2015 edition of Devoxx, JUG Bodensee as a community took over the <a href="https://github.com/TweetWallFX/TweetwallFX/commit/89c7a18d470885015156e2e4e72cc9834cbc8d54" target="_blank">development</a> effort.</p>
                     </div>
                 </div>
             </div>
@@ -220,9 +220,9 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"><a href="https://github.com/TweetWallFX/TweetwallFX/commit/1ed60f716a2297331094ed4e60e2ebeca5a74dbe" target="_blank">A new Era: Initial StepEngine released</a></h4>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">A new Era: Initial StepEngine released</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7">
-                            Creating sequences of different animations became way to complex to be maintained easily. As a solution a StepEngine was created as the core of all sequencing. This allowed a centralized setup of the whole animation sequence driving the wall display.</p>
+                            Creating sequences of different animations became way to complex to be maintained easily. As a solution a <a href="https://github.com/TweetWallFX/TweetwallFX/commit/1ed60f716a2297331094ed4e60e2ebeca5a74dbe" target="_blank">StepEngine</a> was created as the core of all sequencing. This allowed a centralized setup of the whole animation sequence driving the wall display.</p>
                     </div>
                 </div>
             </div>
@@ -253,8 +253,8 @@
                 <span class="iconBackground"></span>
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
-                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5"><a href="https://twitter.com/SvenNB/status/844314850994147329" target="_blank">The wall is now international</a></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">After serving Devoxx Belgium for some time, a first request from another conference was served by the community - Tweet Wall FX for DevoxxUS</p>
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">The Wall is now International</h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">After serving Devoxx Belgium for some time, a first request from another conference was served by the community - <a href="https://twitter.com/SvenNB/status/844314850994147329" target="_blank">Tweet Wall FX for DevoxxUS</a></p>
                     </div>
                 </div>
             </div>
