--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style display-7">Patrick Reinhart</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style display-7">
-                               Embedded Suiss Army Knife</small>
+                               Embedded Swiss Army Knife</small>
                     </div>
                 </div>
             </div>
